REGRESSION(167145): Many media tests fail https://bugs.webkit.org/show_bug.cgi?id=131569

Reviewed by Brent Fulgham.

* PlatformGTK.cmake: Add the localized strings file to the list of user agent scripts.
* platform/gtk/RenderThemeGtk.cpp:
(WebCore::RenderThemeGtk::mediaControlsScript): Include the localized strings file in the script body.

Canonical link: https://commits.webkit.org/149638@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167170 268f45cc-cd09-0410-ab3c-d52691b4dbfc